@@ -32,7 +32,7 @@ Key functionalities include:
 
 __author__ = "Laerinok"
 __version__ = "2.1.3"
-__date__ = "2025-06-20"  # Last update
+__date__ = "2025-08-24"  # Last update
 
 # fetch_mod_info.py
 
@@ -62,7 +62,7 @@ client = HTTPClient()
 
 
 def get_mod_path():
-    # Check if ModsPath and path exist in the config.
+    # Ensure the directory exists
     if "ModsPath" not in global_cache.config_cache or "path" not in \
             global_cache.config_cache["ModsPath"]:
         print(
@@ -70,11 +70,11 @@ def get_mod_path():
         logging.error(
             "Error: The ModsPath or 'path' key is missing in the configuration.")
         time.sleep(2)
-        sys.exit(1)  # Stop the script with an error code
+        sys.exit(1)
 
     args = cli.parse_args()
     if args.modspath:
-        mods_path = args.modspath.resolve()  # use the argument modspath if present.
+        mods_path = args.modspath.resolve()
         global_cache.config_cache['ModsPath']['path'] = mods_path
     else:
         mods_path = Path(global_cache.config_cache['ModsPath']['path']).resolve()
@@ -84,7 +84,7 @@ def get_mod_path():
             f"[indian_red1]{lang.get_translation("error")}[/indian_red1] {lang.get_translation("fetch_mod_info_error_mods_path_not_found").format(mods_path=mods_path)}")
         logging.error(f"Error: The mods path {mods_path} is not found.")
         time.sleep(2)
-        sys.exit(1)  # Stop the script with an error code
+        sys.exit(1)
 
     return mods_path
 
@@ -95,24 +95,20 @@ def get_modinfo_from_zip(zip_path):
         with zipfile.ZipFile(zip_path, 'r') as zip_ref:
             file_list = zip_ref.namelist()
 
-            # Check if modinfo.json is at the root of the zip file
             if 'modinfo.json' in file_list:
                 modinfo_path = 'modinfo.json'
             else:
-                # Search for modinfo.json in any subdirectory and stop at the first match
                 modinfo_path = next(
                     (f for f in file_list if f.endswith('/modinfo.json')), None)
 
                 if not modinfo_path:
                     return None, None, None, None
 
-            # Open and read modinfo.json
             with zip_ref.open(modinfo_path) as modinfo_file:
                 raw_json = modinfo_file.read().decode('utf-8-sig')
-                fixed_json = fix_json(raw_json)  # Fix potential JSON formatting issues
+                fixed_json = fix_json(raw_json)
                 modinfo = json.loads(fixed_json)
 
-                # Convert all keys to lowercase to avoid case sensitivity issues
                 modinfo_lower = {k.lower(): v for k, v in modinfo.items()}
                 return (
                     modinfo_lower.get('modid'),
@@ -135,12 +131,11 @@ def get_cs_info(cs_path):
     """Gets Version, Side, namespace information from a .cs file."""
     with open(cs_path, 'r', encoding='utf-8') as cs_file:
         content = cs_file.read()
-        # Using regex to extract the values
         version_match = re.search(r'Version\s*=\s*"([^"]+)"', content)
         side_match = re.search(r'Side\s*=\s*"([^"]+)"', content)
         namespace_match = re.search(r'namespace\s+([A-Za-z0-9_]+)', content)
         description_match = re.search(r'Description\s*=\s*"([^"]+)"', content)
-        # If the information is found, return it
+
         version = version_match.group(1) if version_match else None
         side = side_match.group(1) if side_match else None
         description = description_match.group(1) if description_match else None
@@ -164,10 +159,9 @@ def process_mod_file(file, mods_data, invalid_files):
                     "Filename": file.name
                 })
             else:
-                invalid_files.append(file.name)  # Add file name to invalid files list
+                invalid_files.append(file.name)
         else:
-            invalid_files.append(
-                file.name)  # Add corrupted file name to invalid files list
+            invalid_files.append(file.name)
     elif file.suffix == '.cs':
         local_mod_version, side, namespace, modid, mod_url_dl, description = get_cs_info(
             file)
@@ -180,37 +174,24 @@ def process_mod_file(file, mods_data, invalid_files):
                 "Filename": file.name
             })
         else:
-            invalid_files.append(file.name)  # Add invalid .cs file name
+            invalid_files.append(file.name)
 
 
 def get_mainfile_from_excluded_mods(sorted_releases, excluded_mods):
     """
     Récupère le mainfile correspondant au Filename des mods exclus.
-
-    Args:
-        sorted_releases (list): La liste des releases triées.
-        excluded_mods (list): La liste des mods exclus.
-
-    Returns:
-        list: Une liste des mainfiles correspondants aux mods exclus.
     """
     excluded_filenames = {mod['Filename'] for mod in excluded_mods}
     mainfiles = []
-
     for release in sorted_releases:
         if release['filename'] in excluded_filenames:
             mainfiles.append(release['mainfile'])
-
     return mainfiles
 
 
 def get_compatible_releases(mod_json, user_game_version, exclude_prerelease):
     """
     Retrieve all compatible releases for the mod based on the user_game_version and changelogs
-
-    A release is considered compatible if at least one of its tag versions has the same major and minor version
-    as user_game_version and is less than or equal to user_game_version.
-    Optionally, pre-release versions (-rc, -dev, etc.) can be excluded.
     """
     releases = mod_json.get("mod", {}).get("releases", [])
     user_ver = Version(user_game_version.lstrip("v"))
@@ -221,24 +202,20 @@ def get_compatible_releases(mod_json, user_game_version, exclude_prerelease):
                 continue
             try:
                 tag_ver = Version(tag.lstrip("v"))
-                # Exclude pre-releases if the option is enabled
                 if exclude_prerelease.lower() == "true" and Version(
                         release['modversion']).is_prerelease:
                     continue
-                    # Include release if the tag is compatible
                 if tag_ver <= user_ver and (tag_ver.major, tag_ver.minor) == (
                         user_ver.major, user_ver.minor):
                     compatible_releases.append(release)
-                    break  # Stop checking other tags for this release.
+                    break
             except Exception:
-                continue  # Ignore invalid version tags.
-
+                continue
     if not compatible_releases:
         logging.info(
             f"{mod_json['mod']['name']}: No compatible release found for game version {user_game_version}.")
         return []
 
-    # Sort compatible releases by modversion (including patch) and creation date in descending order.
     sorted_releases = sorted(
         compatible_releases,
         key=lambda r: (Version(r.get("modversion") or "0.0.0"), r.get("created") or ""),
@@ -247,34 +224,22 @@ def get_compatible_releases(mod_json, user_game_version, exclude_prerelease):
     return sorted_releases
 
 
-def get_installed_versions_download_urls(sorted_releases, global_cache_installed_mods):
+def get_installed_versions_download_urls(all_releases, global_cache_installed_mods):
     """
-    Iterates through global_cache.mods_data["installed_mods"] and for each element,
-    compares Local_Version with release.get("modversion"). If they are equal,
-    retrieves the mainfile of the corresponding element in sorted_releases.
-
-    Args:
-        sorted_releases (list): List of dictionaries containing release information.
-        global_cache_installed_mods (list): List of dictionaries containing installed mods information.
-
-    Returns:
-        dict: A dictionary where the keys are the filenames of the installed mods
-              and the values are the corresponding mainfiles found in sorted_releases.
+    Finds the download URL for the exact installed version of a mod.
     """
     installed_urls = {}
-
-    if not global_cache_installed_mods or not sorted_releases:
+    if not global_cache_installed_mods or not all_releases:
         return installed_urls
 
     for installed_mod in global_cache_installed_mods:
         installed_version = installed_mod.get("Local_Version")
         installed_filename = installed_mod.get("Filename")
-
         if installed_version and installed_filename:
-            for release in sorted_releases:
+            for release in all_releases:
                 if release.get("modversion") == installed_version:
                     installed_urls[installed_filename] = release.get("mainfile")
-                    break  # Once a match is found, proceed to the next installed mod
+                    break
 
     return installed_urls
 
@@ -288,30 +253,27 @@ def get_mod_api_data(mod):
     mod_url_api = f'{config.URL_BASE_MOD_API}{modid}'
     logging.debug(f"Retrieving mod info from: {mod_url_api}")
 
-    # Initialize changelog to None
     changelog = None
-
     try:
         response = client.get(mod_url_api, timeout=int(
             global_cache.config_cache["Options"]["timeout"]))
-        response.raise_for_status()  # Lève une exception pour les codes d'erreur HTTP (4xx ou 5xx)
+        response.raise_for_status()
         mod_json = response.json()
-    except Exception as e:  # Capturer les erreurs de requête ou de connexion
+    except Exception as e:
         logging.warning(
             f"Failed to retrieve mod info for mod: {modid} at link {mod_url_api}. Error: {e}")
         mod["Mod_url"] = "Local mod"
         global_cache.mods_data["excluded_mods"].append({"Filename": mod['Filename']})
         logging.info(f"{mod['Name']} added to excluded mods")
-        # Return None for all 7 expected fields, including the new changelog field
         return None, None, None, None, None, None, None
 
-    if mod_json['statuscode'] != '200':  # if mod not on modDB or other specific API issue
+    if mod_json['statuscode'] != '200':
         logging.warning(
             f"Failed to retrieve mod info for mod: {modid} (status code {mod_json['statuscode']}) at link {mod_url_api}")
         mod["Mod_url"] = "Local mod"
         global_cache.mods_data["excluded_mods"].append({"Filename": mod['Filename']})
         logging.info(f"{mod['Name']} added to excluded mods")
-        return None, None, None, None, None, None, None  # Add None for changelog
+        return None, None, None, None, None, None, None
 
     mod_assetid = mod_json["mod"]["assetid"]
     side = mod_json["mod"]["side"]
@@ -322,60 +284,52 @@ def get_mod_api_data(mod):
                                               global_cache.config_cache['Game_Version'][
                                                   'user_game_version'],
                                               exclude_prerelease)
-
     if sorted_releases:
-        # If compatible releases are found, retrieve the changelog from the latest one
         changelog = sorted_releases[0].get('changelog')
 
     mainfile_excluded_file = get_mainfile_from_excluded_mods(sorted_releases,
                                                              global_cache.mods_data[
                                                                  'excluded_mods'])
-
     if any(excluded_mod['Filename'] == mod['Filename'] for excluded_mod in
            global_cache.mods_data['excluded_mods']):
         if mainfile_excluded_file:
             mainfile_url = mainfile_excluded_file[0]
             encoded_mainfile_url = urllib.parse.quote(mainfile_url, safe=':/=?&')
             mod_latest_version_for_game_version = sorted_releases[0]['modversion']
-            # Add changelog to the return tuple
             return mod_assetid, mod_url, encoded_mainfile_url, mod_latest_version_for_game_version, side, None, changelog
         else:
             global_cache.mods_data["installed_mods"][-1]["Side"] = side
             global_cache.mods_data["installed_mods"][-1]["Mod_url"] = mod_url
-            # Add changelog to the return tuple
             return mod_assetid, mod_url, None, None, side, None, changelog
 
     if not sorted_releases:
         global_cache.mods_data["installed_mods"][-1]["Side"] = side
         global_cache.mods_data["installed_mods"][-1]["Mod_url"] = mod_url
-        # Add changelog to the return tuple (it will be None if sorted_releases is empty)
         return mod_assetid, mod_url, None, None, side, None, changelog
 
     mainfile_url = sorted_releases[0]['mainfile']
     encoded_mainfile_url = urllib.parse.quote(mainfile_url, safe=':/=?&')
 
-    installed_download_url = get_installed_versions_download_urls(sorted_releases,
-                                                                  global_cache.mods_data[
-                                                                      "installed_mods"])
+    # Correction : Utiliser la nouvelle fonction pour trouver l'URL exacte de la version installée
+    installed_download_urls_dict = get_installed_versions_download_urls(
+        mod_json.get("mod", {}).get("releases", []), [mod])
+
     encoded_installed_download_url = None
-    for key, url in installed_download_url.items():
-        encoded_installed_download_url = urllib.parse.quote(url, safe=':/=?&')
+    if mod['Filename'] in installed_download_urls_dict:
+        url_to_encode = installed_download_urls_dict[mod['Filename']]
+        encoded_installed_download_url = urllib.parse.quote(url_to_encode, safe=':/=?&')
 
     mod_latest_version_for_game_version = sorted_releases[0]['modversion']
-    # Final addition of changelog to the function's return
     return mod_assetid, mod_url, encoded_mainfile_url, mod_latest_version_for_game_version, side, encoded_installed_download_url, changelog
 
 
-# Entry point of the module: scans the mods folder and retrieves mod information.
 def scan_and_fetch_mod_info(mods_folder):
     """
     Orchestrates the scanning of the mods folder, extraction of basic mod information, and retrieval of detailed mod data from the API.
-    Returns: None: The function modifies the global_cache.mods_data dictionary in place.
     """
-    invalid_files = []  # List of invalid or corrupted files.
+    invalid_files = []
 
     max_workers = validate_workers()
-
     mod_files = list(mods_folder.iterdir())
     total_files = len(mod_files)
     fixed_bar_width = 40
@@ -399,18 +353,15 @@ def scan_and_fetch_mod_info(mods_folder):
                                     invalid_files))
 
             for idx, future in enumerate(as_completed(futures)):
-                future.result()  # Wait for completion and handle exceptions
-                progress.update(task,
-                                advance=1)  # Update the progress bar after each file.
+                future.result()
+                progress.update(task, advance=1)
 
-    # Sort the mods by "Name."
     global_cache.mods_data["installed_mods"].sort(
         key=lambda mod: mod["Name"].lower() if mod["ModId"] else "")
 
-    # Prepare the API calls with multithreading and the progress bar.
     mod_ids = [mod['ModId'] for mod in global_cache.mods_data["installed_mods"]]
     mods = global_cache.mods_data[
-        "installed_mods"]  # Complete list of mods to associate the results.
+        "installed_mods"]
 
     with Progress(
             TextColumn("[bold blue]{task.description}", justify="right"),
@@ -425,7 +376,7 @@ def scan_and_fetch_mod_info(mods_folder):
     ) as progress:
         api_task = progress.add_task(
             f"[green]{lang.get_translation("fetch_mod_info_fetching_mod_info")}",
-            total=len(mod_ids), mod_name=" ")  # Initialise mod_name avec un espace
+            total=len(mod_ids), mod_name=" ")
         with ThreadPoolExecutor(max_workers=max_workers) as executor:
             api_futures = []
             future_to_mod = {}
@@ -435,25 +386,21 @@ def scan_and_fetch_mod_info(mods_folder):
                 future_to_mod[future] = mod
             for future in as_completed(api_futures):
                 mod = future_to_mod[future]
-                # Now unpack 7 values from the result tuple
                 mod_assetid, mod_url, mainfile_url, mod_latest_version_for_game_version, side, installed_download_url, changelog_from_api = future.result()
 
                 if mod_assetid and mod_url:
                     mod["AssetId"] = mod_assetid
                     mod["Mod_url"] = mod_url
-                    mod[
-                        "mod_latest_version_for_game_version"] = mod_latest_version_for_game_version
+                    mod["mod_latest_version_for_game_version"] = mod_latest_version_for_game_version
                     mod["latest_version_dl_url"] = mainfile_url
                     mod["Side"] = side
                     mod["installed_download_url"] = installed_download_url
-                    mod["Changelog"] = changelog_from_api  # Store the changelog
+                    mod["Changelog"] = changelog_from_api
                     logging.debug(
                         f"Received assetid: {mod_assetid}, mod_url: {mod_url}, and changelog for mod: {mod['Name']}")
                 else:
                     logging.warning(
                         f"Failed to retrieve API data for mod: {mod['Name']}. Skipping update for this mod.")
-
-                # Update the progress bar with the mod name.
                 progress.update(api_task, advance=1,
                                 description=f'[cyan]{lang.get_translation("fetch_mod_info_fetching_mod_info_name")}',
                                 mod_name=mod['Name'])
